[package]
name = "coverageinfo-iface"
version = "0.1.0"
authors = ["Alan Egerton <eggyal@gmail.com>"]
edition = "2018"
description = "Rust-to-Rust FFI definitions for code coverage information"
repository = "https://github.com/eggyal/coverageinfo-iface"
license = "MIT"
keywords = ["jit", "embed", "test", "coverage", "ffi"]
categories = ["api-bindings", "development-tools::testing"]
publish = false

[lib]
path = "lib.rs"

[dependencies]
abi_stable = "0.9.3"
